[gd_scene load_steps=7 format=2]

[ext_resource path="res://asset/military/tower/tower.png" type="Texture" id=1]
[ext_resource path="res://asset/military/tower/tower.gd" type="Script" id=2]
[ext_resource path="res://asset/military/flag/flag.tscn" type="PackedScene" id=3]
[ext_resource path="res://asset/ui/icons/defence.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 53.6508

[sub_resource type="Animation" id=2]
resource_name = "tower_iddle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -170 ), Vector2( 0, -190 ), Vector2( 0, -200 ), Vector2( 0, -180 ) ]
}

[node name="tower" type="RigidBody2D"]
mode = 2
gravity_scale = 0.0
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="flag" parent="." instance=ExtResource( 3 )]
position = Vector2( -2.82952, -21.4973 )
scale = Vector2( 0.7, 0.7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.35675, 68.8651 )
shape = SubResource( 1 )

[node name="shooting_point" type="Position2D" parent="."]
position = Vector2( 0.943848, -29.2601 )

[node name="shot_delay" type="Timer" parent="."]
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
volume_db = -15.0
bus = "sfx"

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 0, -170 )
z_index = 1
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "tower_iddle"
anims/tower_iddle = SubResource( 2 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
